Sep 26 2004  devel  Phased out split of ifdefs in tracktypes
Sep 23 2004  devel  Fixed sentinel warning in channel control child
Sep 22 2004  devel  Fixed parsing of enable lines that caused the first field
                     to be dropped
Sep 21 2004  devel  Removed spurious debug string
                    Fixed handling '*' and '\r' as final characters of a string
                    Fixed version in protocol
                    Fixed variable init in kismet_server
Sep 19 2004  devel  Implemented modular speech and sound players.  Arrr.
                    Implemented GPSD lock/lost sound and speech with new module
                    Fixed second register attempt of gpsd protocol
Sep 18 2004  devel  First generation of new gpsd client interface using generic
                     tcpclient core and support for ESRs gpsd2.0 protocol
                    Fixed dual TIME protocol
                    Fixed handling of weird chars at end of line
                    Moved gps protocol hooks to gpsdclient
Sep 17 2004  devel  Removed spurious headers from endian_magic that weren't
                     really necessary
Sep 16 2004  devel  Fixed spurious warning about NetworkServer constructor
                    Removed spurious debug prints from kisnetframe parser
                    Fixed file descriptor zeroing in tcpserver
                    Added ring buffer flushing to tcpserver shutdown
                    Moved tcpserver parsing back into main since I'm stupid
Sep 15 2004  devel  Added requeuing of fatal error messages as Kismet terminates
                    Moved configfile manuf handling to packetracker
Sep 14 2004  devel  Forked to new temporary branch, major updates, see SVN
                     changes
                    Moved config file parsing into alertracker and tcpserver
                    Moved more error messages to messagebus
Sep 08 2004  devel  Fixed earthdistance math w/ info from ESR for network 