@@ -1,3 +1,5 @@
+Sep 27 2004  devel  Fixed remnant of gpsdclient refering to tcpclient instead
+                     of generic netclient
 Sep 26 2004  devel  Phased out split of ifdefs in tracktypes
 Sep 23 2004  devel  Fixed sentinel warning in channel control child
 Sep 22 2004  devel  Fixed parsing of enable lines that caused the first field
